# wiki-forge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
cli/: main.py
cli/commands/: compile.py  ingest.py  lint.py  query.py  session.py  status.py
config/: default.yaml
kb/agents/: base.py  concept_extractor.py  entity_agent.py  index_builder.py  integration_agent.py  linker.py  linting.py  research.py  summarizer.py
kb/ingestion/: ingestion_engine.py
kb/ingestion/parsers/: document_parsers.py
kb/pipelines/: engine.py  orchestrator.py
kb/search/: hybrid_search.py
kb/services/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py
kb/services/vector/: faiss_store.py
kb/storage/: metadata_store.py  wiki_logger.py  wiki_manager.py
kb/tools/: plugin_registry.py
kb/utils/: config.py  helpers.py  logging.py
raw/: .gitkeep
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py
tests/unit/: test_agents.py  test_orchestrator.py  test_storage_and_helpers.py
web/: main.py
web/routers/: agents.py  articles.py  search.py
web/templates/: article.html  articles.html  base.html  index.html  run.html  search.html
wiki/: WIKI.md
